log/build_2021-05-30_00-18-40/sim_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp: In function ‘void setvel(std::shared_ptr<interfaces::srv::Platform1Vel_Request_<std::allocator<void> > >, std::shared_ptr<interfaces::srv::Platform1Vel_Response_<std::allocator<void> > >)’:
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:13:13: error: ‘using element_type = struct interfaces::srv::Platform1Vel_Response_<std::allocator<void> >’ {aka ‘struct interfaces::srv::Platform1Vel_Response_<std::allocator<void> >’} has no member named ‘sent’
   13 |   response->sent =1;
      |             ^~~~
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:9:10: warning: unused variable ‘xvel’ [-Wunused-variable]
    9 |   double xvel = request->x_vel;
      |          ^~~~
make[2]: *** [CMakeFiles/plat1_send_vel_node.dir/build.make:63: CMakeFiles/plat1_send_vel_node.dir/src/plat1_send_vel_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/plat1_send_vel_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
